--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -17,6 +17,7 @@ section {
   box-sizing: border-box;
   background-color: var(--light);
   font-family: var(--bodyFont);
+  font-size: 1.125rem;
   color: var(--darkgray);
 }
 
@@ -326,7 +327,8 @@ thead {
   color: var(--dark);
   font-weight: revert;
   margin-bottom: 0;
-
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
   article > & > a[role="anchor"] {
     color: var(--dark);
     background-color: transparent;
@@ -355,19 +357,19 @@ h6 {
 
 // typography improvements
 h1 {
-  font-size: 1.75rem;
+  font-size: 2rem;
   margin-top: 2.25rem;
   margin-bottom: 1rem;
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-size: 2.25rem;
   margin-top: 1.9rem;
   margin-bottom: 1rem;
 }
 
 h3 {
-  font-size: 1.12rem;
+  font-size: 1.75rem;
   margin-top: 1.62rem;
   margin-bottom: 1rem;
 }
