--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,11 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+.content-meta {
+  font-style: italic;
+}
+
+.content > li {
+  font-size: 1rem;
+  margin-bottom: 0.25em;
+}
