--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -325,7 +325,7 @@ h6,
 thead {
   font-family: var(--headerFont);
   color: var(--dark);
-  font-weight: revert;
+  font-weight: $semiBoldWeight;
   margin-bottom: 0;
   text-transform: uppercase;
   letter-spacing: 0.05em;
